--- a/public/tree-viewer.html
+++ b/public/tree-viewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family Tree</title>
+    <title>מציג נתוני משפחה</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -87,7 +87,7 @@
                                                  focus:outline-none focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50"
                     data-he="English" data-en="עברית">English</button>
             <div class="flex flex-col items-center flex-grow">
-                <h1 class="text-4xl md:text-5xl font-extrabold text-blue-600 mb-2" data-he="עץ המשפחה" data-en="Family Tree">עץ המשפחה</h1>
+                <h1 class="text-4xl md:text-5xl font-extrabold text-blue-600 mb-2" data-he="מציג נתוני משפחה" data-en="Family Data Viewer">מציג נתוני משפחה</h1>
                 <p id="status-message" class="text-lg md:text-xl text-gray-500"></p>
             </div>
         </header>
@@ -110,7 +110,7 @@
         const i18n = {
             'he': {
                 'loading_user': 'בודק חיבור משתמש...',
-                'loading_family': (family) => `טוען נתונים עבור משפחת ${side}...`,
+                'loading_family': (family) => `טוען נתונים עבור משפחת ${family}...`,
                 'success': 'הנתונים נטענו בהצלחה!',
                 'no_user_family': 'שגיאה: לא ניתן לזהות את משפחת המשתמש. יש לוודא שהינך מחובר.',
                 'network_error': 'שגיאת רשת או שהמשתמש לא מחובר',
@@ -124,7 +124,7 @@
             },
             'en': {
                 'loading_user': 'Checking user connection...',
-                'loading_family': (family) => `Loading data for the ${side} family...`,
+                'loading_family': (family) => `Loading data for the ${family} family...`,
                 'success': 'Data loaded successfully!',
                 'no_user_family': 'Error: Could not identify user\'s family. Please ensure you are logged in.',
                 'network_error': 'Network error or user is not logged in',
@@ -174,7 +174,7 @@
                     throw new Error(i18n[currentLang]['network_error']);
                 }
                 const user = await response.json();
-                return user;
+                return user.user;
             } catch (error) {
                 console.error("Error fetching user data:", error);
                 throw new Error(i18n[currentLang]['no_user_details']);
@@ -260,7 +260,7 @@
             errorMessageEl.classList.add('hidden');
             try {
                 const user = await fetchUserData();
-                if (user.isAuthenticated && user.familySide) {
+                if (user && user.familySide) {
                     await loadAndDisplayData(user.familySide);
                 } else {
                     statusMessageEl.textContent = '';
