--- a/public/tree-viewer.html
+++ b/public/tree-viewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>מציג נתוני משפחה</title>
+    <title>Family Tree</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -79,9 +79,9 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 text-gray-800 min-h-screen flex items-center justify-center p-4">
-    <div id="app-container" class="w-full max-w-4xl p-8 md:p-12 rounded-2xl shadow-xl bg-white border border-gray-200" dir="rtl">
-        <header class="mb-12 flex items-start justify-between">
+<body class="bg-white text-gray-800 min-h-screen">
+    <div id="app-container" class="w-full" dir="rtl">
+        <header class="p-8 md:p-12 mb-12 flex items-start justify-between">
             <button id="lang-toggle-button" class="px-6 py-2 rounded-full font-bold transition-colors duration-300
                                                  bg-blue-600 hover:bg-blue-700 text-white shadow-lg
                                                  focus:outline-none focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50"
@@ -92,7 +92,7 @@
             </div>
         </header>
 
-        <main id="content-container" class="w-full overflow-x-auto"></main>
+        <main id="content-container" class="w-full overflow-x-auto p-4"></main>
 
         <div id="error-message" class="hidden text-center mt-10 p-6 bg-red-200 text-red-800 rounded-lg glowing-border">
             <p class="font-bold text-xl mb-2" data-he="שגיאה: לא ניתן לטעון את הנתונים." data-en="Error: Could not load data.">שגיאה: לא ניתן לטעון את הנתונים.</p>
