--- a/public/gallery2.html
+++ b/public/gallery2.html
@@ -202,6 +202,14 @@
             // Global variables from the environment
             const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
             const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : null;
+              apiKey: "AIzaSyB99bQpokjpcuXilwu3usXoOFLmegkVnb4",
+            authDomain: "family-gallery-d707d.firebaseapp.com",
+            projectId: "family-gallery-d707d",
+            storageBucket: "family-gallery-d707d.appspot.com",
+            messagingSenderId: "227810040631",
+            appId: "1:227810040631:web:6bc0dc9a983fac04e4d8b2",
+            measurementId: "G-84CYX5S1F3"
+        };
             const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
 
             // Firebase instances
