--- a/public/gallery2.html
+++ b/public/gallery2.html
@@ -664,7 +664,7 @@
             const callGeminiApi = async (prompt) => {
                 let retryCount = 0;
                 const maxRetries = 3;
-                const apiKey = "";
+                const apiKey = "AIzaSyDEDWC_kgOcky3pBPQJ4kYY_b9lOqxz97M";
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
                 while (retryCount < maxRetries) {
