--- a/public/index.html
+++ b/public/index.html
@@ -440,6 +440,7 @@
 
         });
     </script>
+    <script src= "https://www.kommunicate.io/livechat-demo?appId=bc088f1083ad1ac15179ce64f6b0dccb&botIds=gmail-y6mds&assignee=gmail-y6mds" async></script>
     <script src="//code.tidio.co/wnmxintabp8xi2frtmizt5q9sopbk32o.js" async></script>
 </body>
 </html>
