--- a/public/index.html
+++ b/public/index.html
@@ -440,7 +440,17 @@
 
         });
     </script>
-    <script src= "https://www.kommunicate.io/livechat-demo?appId=bc088f1083ad1ac15179ce64f6b0dccb&botIds=gmail-y6mds&assignee=gmail-y6mds" async></script>
+    <script type="text/javascript">
+    (function(d, m){
+        var kommunicateSettings = 
+            {"appId":"bc088f1083ad1ac15179ce64f6b0dccb","popupWidget":true,"automaticChatOpenOnNavigation":true};
+        var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+        s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+        var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+        window.kommunicate = m; m._globals = kommunicateSettings;
+    })(document, window.kommunicate || {});
+/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+</script>
     <script src="//code.tidio.co/wnmxintabp8xi2frtmizt5q9sopbk32o.js" async></script>
 </body>
 </html>
