--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
     <main class="max-w-6xl mx-auto mt-8 p-6 md:p-8 bg-white rounded-3xl shadow-xl">
         <section class="mb-8 p-6 bg-blue-50 rounded-2xl shadow-inner">
             <h3 id="sectionWelcome" class="text-xl md:text-2xl font-bold mb-4 text-blue-900">🌟 ברוכים הבאים למרכז המשפחתי</h3>
-            <p id="intro1" class="text-base md:text-lg text-gray-700 leading-relaxed mb-4">אתר זה נבנה עבור משפחות: בן אבו, אלהרר, מלכה, בן דוד, ברומברג, ברנבאום, פאס-שנק, ויינברגר, לייבנר, ואן דר ולדה, בהר, דה פריס, איטליאנדר, איזקס, שפון, ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.</p>
+            <p id="intro1" class="text-base md:text-lg text-gray-700 leading-relaxed mb-4">אתר זה נבנה עבור משפחות: בן אבו, אלחרר, מלכה, בן דוד, ברומברג, ברנבאום, פאס-שנק, ויינברגר, לייבנר, ואן דר ולדה, בהר, דה פריס, איטליאנדר, איזקס, שפון, ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.</p>
             <p id="intro2" class="text-base md:text-lg text-gray-700 leading-relaxed">ניתן להיכנס לפי צד משפחתי, לעדכן פרטים, לשוחח עם צ׳אט AI משפחתי ולחוות יחד היסטוריה מתועדת.</p>
         </section>
 
@@ -143,7 +143,7 @@
                 searchTitle: "🔍 חיפוש באתר",
                 searchPlaceholder: "הקלד שם או תיאור...",
                 sectionWelcome: "🌟 ברוכים הבאים למרכז המשפחתי",
-                intro1: "אתר זה נבנה עבור משפחות: בן אבו, אלהרר, מלכה, בן דוד, ברומברג, ברנבאום, פאס-שנק, ויינברגר, לייבנר, ואן דר ולדה, בהר, דה פריס, איטליאנדר, איזקס, צ'פון, ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.",
+                intro1: "אתר זה נבנה עבור משפחות: בן אבו, אלחרר, מלכה, בן דוד, ברומברג, ברנבאום, פאס-שנק, ויינברגר, לייבנר, ואן דר ולדה, בהר, דה פריס, איטליאנדר, איזקס, צ'פון, ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.",
                 intro2: "ניתן להיכנס לפי צד משפחתי, לעדכן פרטים, לשוחח עם צ׳אט AI משפחתי ולחוות יחד היסטוריה מתועדת.",
                 sectionTree: "ברוכים הבאים לעץ המשפחה שלנו",
                 features: [
