--- a/public/update-request.html
+++ b/public/update-request.html
@@ -2,18 +2,60 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>בקשת עדכון</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>טופס עדכון פרטים</title>
+  <!-- Load Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f3f4f6;
+    }
+    input, textarea, button {
+      direction: rtl; /* Ensure text input direction is right-to-left */
+    }
+  </style>
 </head>
-<body>
-  <main>
-    <h2>בקשת עדכון פרטים באילן היוחסין</h2>
-    <form action="/update-request" method="POST">
-      <input type="text" name="name" placeholder="שם מלא" required>
-      <input type="text" name="relation" placeholder="קשר משפחתי">
-      <textarea name="message" placeholder="פרטים שברצונך לעדכן" rows="6"></textarea>
-      <button type="submit">שלח בקשה</button>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
+
+  <main class="w-full max-w-lg bg-white rounded-xl shadow-2xl p-8">
+    <div class="text-center mb-8">
+      <h2 class="text-3xl font-extrabold text-gray-900 mb-2">בקשת עדכון פרטים</h2>
+      <p class="text-gray-500">אנא מלא/י את הטופס כדי לעדכן פרטים באילן היוחסין המשפחתי.</p>
+    </div>
+
+    <!-- The form sends data to the server-side endpoint "/update-request" -->
+    <form action="/update-request" method="POST" class="space-y-6">
+      <!-- Full Name -->
+      <div>
+        <label for="name" class="sr-only">שם מלא</label>
+        <input type="text" name="name" id="name" placeholder="שם מלא" required
+               class="appearance-none relative block w-full px-4 py-3 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-lg focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm transition duration-300">
+      </div>
+
+      <!-- Family Relation -->
+      <div>
+        <label for="relation" class="sr-only">קשר משפחתי</label>
+        <input type="text" name="relation" id="relation" placeholder="קשר משפחתי"
+               class="appearance-none relative block w-full px-4 py-3 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-lg focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm transition duration-300">
+      </div>
+
+      <!-- Update Details -->
+      <div>
+        <label for="message" class="sr-only">פרטים שברצונך לעדכן</label>
+        <textarea name="message" id="message" placeholder="פרטים שברצונך לעדכן" rows="6" required
+                  class="appearance-none relative block w-full px-4 py-3 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-lg focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm transition duration-300"></textarea>
+      </div>
+
+      <!-- Submit Button -->
+      <div>
+        <button type="submit"
+                class="group relative w-full flex justify-center py-3 px-4 border border-transparent text-sm font-medium rounded-lg text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-300 shadow-md hover:shadow-lg">
+          שלח בקשה
+        </button>
+      </div>
     </form>
   </main>
+
 </body>
 </html>
