--- a/public/signup.html
+++ b/public/signup.html
@@ -14,6 +14,7 @@
       <option value="Ben Abou">Ben Abou</option>
       <option value="Elharrar">Elharrar</option>
       <option value="Malca">Malca</option>
+      <option vaule="Other">Other</option>
     </select>
     <button type="submit">הירשם</button>
   </form>
