--- a/public/forum.html
+++ b/public/forum.html
@@ -226,8 +226,8 @@
                         ✨ שפר את הניסוח
                     </button>
                     <select id="newThreadCategory" required class="w-full sm:w-1/2 px-4 py-3 border rounded-lg focus:ring focus:ring-indigo-300 focus:outline-none" data-lang-key="selectCategoryPlaceholder">
-                        <option value="" disabled selected data-lang-key="selectCategoryOption">בחר קטגוריה...</option>
-                        <option value="היסטוריה משפחתית" data-lang-key="categoryHistory">היסטוריה משפחתית</option>
+                    <option value="" selected data-lang-key="selectCategoryOption">בחר קטגוריה...</option>
+                      <option value="היסטוריה משפחתית" data-lang-key="categoryHistory">היסטוריה משפחתית</option>
                         <option value="שאלות" data-lang-key="categoryQuestions">שאלות</option>
                         <option value="עדכונים" data-lang-key="categoryUpdates">עדכונים</option>
                     </select>
