--- a/public/books/bromberg.html
+++ b/public/books/bromberg.html
@@ -5,28 +5,119 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ספר משפחתי דיגיטלי — Moshe Haim Bromberg</title>
   <style>
-    :root{--bg:#0f172a;--card:#0b1220;--accent:#7c5cff;--muted:#94a3b8;--glass:rgba(255,255,255,0.04)}
-    html,body{height:100%;margin:0;font-family:Inter,Segoe UI,Arial,sans-serif;background:linear-gradient(180deg,#071029 0%, #071a2a 60%);color:#edf2f7}
-    .wrap{max-width:1100px;margin:28px auto;padding:20px}
-    header{display:flex;align-items:center;gap:20px;margin-bottom:18px}
-    header h1{font-size:22px;margin:0}
-    header p{margin:0;color:var(--muted)}
-    .controls{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:18px}
-    .btn{background:linear-gradient(90deg,var(--accent),#4f46e5);padding:8px 12px;border-radius:10px;color:white;border:0;cursor:pointer}
-    .page{background:linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));padding:18px;border-radius:12px;margin-bottom:18px;box-shadow:0 8px 30px rgba(2,6,23,0.6)}
-    h2{margin:0 0 8px 0;color:#fff}
-    .tree{display:flex;gap:18px;flex-direction:column}
-    details{background:var(--glass);padding:8px;border-radius:8px}
-    details[open]{box-shadow:0 6px 20px rgba(0,0,0,0.5)}
-    summary{cursor:pointer;font-weight:600}
-    ul{margin:8px 0 0 0;padding-left:18px}
-    li{margin:6px 0}
-    .spouse{color:#cbd5e1;margin-left:6px}
-    .note{color:var(--muted);font-size:13px}
-    nav.pagination{display:flex;gap:8px;margin-bottom:12px}
-    nav.pagination button{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);padding:6px 10px;border-radius:8px}
-    footer{color:var(--muted);font-size:13px;margin-top:18px}
-    .id{font-weight:700;color:#fff;margin-left:8px}
+    :root {
+      --bg: #f9fafb;
+      --card: #ffffff;
+      --accent: #7c5cff;
+      --muted: #6b7280;
+      --glass: rgba(255,255,255,0.6);
+      --text: #111827;
+    }
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: Inter,Segoe UI,Arial,sans-serif;
+      background: linear-gradient(180deg, #e0f2fe 0%, #fef3c7 60%);
+      color: var(--text);
+    }
+    .wrap {
+      max-width: 1100px;
+      margin: 28px auto;
+      padding: 20px;
+    }
+    header {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 18px;
+    }
+    header h1 {
+      font-size: 22px;
+      margin: 0;
+    }
+    header p {
+      margin: 0;
+      color: var(--muted);
+    }
+    .controls {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      margin-bottom: 18px;
+    }
+    .btn {
+      background: linear-gradient(90deg, var(--accent), #4f46e5);
+      padding: 8px 12px;
+      border-radius: 10px;
+      color: white;
+      border: 0;
+      cursor: pointer;
+    }
+    .page {
+      background: var(--card);
+      padding: 18px;
+      border-radius: 12px;
+      margin-bottom: 18px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.1);
+    }
+    h2 {
+      margin: 0 0 8px 0;
+      color: var(--text);
+    }
+    .tree {
+      display: flex;
+      gap: 18px;
+      flex-direction: column;
+    }
+    details {
+      background: var(--glass);
+      padding: 8px;
+      border-radius: 8px;
+    }
+    details[open] {
+      box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+    }
+    summary {
+      cursor: pointer;
+      font-weight: 600;
+    }
+    ul {
+      margin: 8px 0 0 0;
+      padding-left: 18px;
+    }
+    li {
+      margin: 6px 0;
+    }
+    .spouse {
+      color: #374151;
+      margin-left: 6px;
+    }
+    .note {
+      color: var(--muted);
+      font-size: 13px;
+    }
+    nav.pagination {
+      display: flex;
+      gap: 8px;
+      margin-bottom: 12px;
+    }
+    nav.pagination button {
+      background: transparent;
+      border: 1px solid rgba(0,0,0,0.1);
+      color: var(--muted);
+      padding: 6px 10px;
+      border-radius: 8px;
+    }
+    footer {
+      color: var(--muted);
+      font-size: 13px;
+      margin-top: 18px;
+    }
+    .id {
+      font-weight: 700;
+      color: var(--text);
+      margin-left: 8px;
+    }
   </style>
 </head>
 <body>
@@ -510,7 +601,7 @@
     </section>
 
     <footer>
-      <p class="note">נוצר מתוך רשימת צאצאים שסופקה — ניתן להמיר ל‑PDF / JSON / GEDCOM לפי בקשה.</p>
+      <p class="note">ניתן להציע תיקונים באמצעות <a href="https://our-family-tree.onrender.com/update-request.html"> הטופס הבא</a>.</p>
     </footer>
   </div>
 </body>
