--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
         <a id="menuHome" href="/" class="menu-item">🏠 עמוד ראשי</a>
         <a id="menuUpdates" href="about.html" class="menu-item"><span>ℹ️</span> עמוד העדכונים</a>
         <a id="menuTree" href="/tree.html" class="menu-item"><span>🧬</span> עץ המשפחה</a>
+        <a id="menuBooks" href="/family-book.html" class="menu item"><span>📖</span>ספר משפחתי
         <a id="menuChat" href="/chat.html" class="menu-item"><span>🧑‍💻</span> צ'אט AI</a>
         <a id="menuContact" href="/contact-ways.html" class="menu-item"><span>📩</span> אמצעי תקשורת משפחתיים</a>
         <a id="menuGallery" href="/gallery.html" class="menu-item"><span>🖼️</span> גלריית תמונות</a>
@@ -167,7 +168,7 @@
                 ],
                 footerText: "© 2025 אתר המשפחה • נבנה באהבה ע\"י המשפחה •",
                 adminLink: "🛠️ ניהול",
-                menus: ["🏠 עמוד ראשי", "ℹ️ עמוד העדכונים", "🧬 עץ המשפחה", "🧑‍💻 צ'אט AI", "📩 אמצעי תקשורת משפחתיים", "🖼️ גלריית תמונות", "🕯️ קיר זיכרון", "🗓️ ציר זמן", "📆 לוח שנה", "👪 פורום משפחתי", "📖 ביוגרפיות", "📊 סטטיסטיקות", "עדכון פרטים", "העלאת תמונות", "העלאת סרטון", "חיפוש AI", "מפת נדודים", "📰 עלון", "🔐 כניסת משתמשים", "התנתקות"],
+                menus: ["🏠 עמוד ראשי", "ℹ️ עמוד העדכונים", ,"📖 ספר משפחתי"🧬 עץ המשפחה", "🧑‍💻 צ'אט AI", "📩 אמצעי תקשורת משפחתיים", "🖼️ גלריית תמונות", "🕯️ קיר זיכרון", "🗓️ ציר זמן", "📆 לוח שנה", "👪 פורום משפחתי", "📖 ביוגרפיות", "📊 סטטיסטיקות", "עדכון פרטים", "העלאת תמונות", "העלאת סרטון", "חיפוש AI", "מפת נדודים", "📰 עלון", "🔐 כניסת משתמשים", "התנתקות"],
                 loggedInAs: "מחובר כ:",
                 role: "תפקיד:",
                 familySide: "צד משפחתי:",
@@ -204,7 +205,7 @@
                 ],
                 footerText: "© 2025 Family Website • Built with love by the family •",
                 adminLink: "🛠️ Admin",
-                menus: ["🏠 Home", "ℹ️ Updates", "🧬 Family Tree", "🧑‍💻 AI Chat", "📩 Family Contacts", "🖼️ Gallery", "🕯️ Memorial Wall", "🗓️ Timeline", "📆 Calendar", "👪 Family Forum", "📖 Biographies", "📊 Statistics", "Update Details", "Upload Photo", "Upload Video", "AI Search", "Migration Map", "📰 Newsletter", "🔐 Login", "Logout"],
+                menus: ["🏠 Home", "ℹ️ Updates", "🧬 Family Tree","📖 Family Book" "🧑‍💻 AI Chat", "📩 Family Contacts", "🖼️ Gallery", "🕯️ Memorial Wall", "🗓️ Timeline", "📆 Calendar", "👪 Family Forum", "📖 Biographies", "📊 Statistics", "Update Details", "Upload Photo", "Upload Video", "AI Search", "Migration Map", "📰 Newsletter", "🔐 Login", "Logout"],
                 loggedInAs: "Logged in as:",
                 role: "Role:",
                 familySide: "Family Side:",
@@ -241,7 +242,7 @@
                 ],
                 footerText: "© 2025 Site de la famille • Construit avec amour par la famille •",
                 adminLink: "🛠️ Admin",
-                menus: ["🏠 Accueil", "ℹ️ Mises à jour", "🧬 Arbre généalogique", "🧑‍💻 Chat IA", "📩 Contacts familiaux", "🖼️ Galerie", "🕯️ Mur commémoratif", "🗓️ Chronologie", "📆 Calendrier", "👪 Forum familial", "📖 Biographies", "📊 Statistiques", "Mettre à jour", "Téléverser photo", "Téléverser vidéo", "Recherche IA", "Carte migrations", "📰 Bulletin", "🔐 Connexion", "Déconnexion"],
+                menus: ["🏠 Accueil", "ℹ️ Mises à jour", "🧬 Arbre généalogique","📖 livre de famille" "🧑‍💻 Chat IA", "📩 Contacts familiaux", "🖼️ Galerie", "🕯️ Mur commémoratif", "🗓️ Chronologie", "📆 Calendrier", "👪 Forum familial", "📖 Biographies", "📊 Statistiques", "Mettre à jour", "Téléverser photo", "Téléverser vidéo", "Recherche IA", "Carte migrations", "📰 Bulletin", "🔐 Connexion", "Déconnexion"],
                 loggedInAs: "Connecté en tant que:",
                 role: "Rôle:",
                 familySide: "Côté de la famille:",
